<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

  <Space
      android:layout_width="match_parent"
      android:layout_height="@dimen/medium_space"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/intro_caption"
      android:id="@+id/textViewIntro"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/fence_feature_default_name"
      android:id="@+id/textViewFenceName"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="@dimen/small_space"
      />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/choose_fence_caption"
        android:id="@+id/buttonChooseName"
        android:onClick="onClick_SelectFromList"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="32dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/fence_subtitle"
      android:id="@+id/textViewFenceSubtitle"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/editTextFenceSubtitle"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="32dp"
      />

</LinearLayout>